url preview: Fix CSS to make url preview titles clickable.
06f3cb2b78ffcd29bd2742bd03a374871f3fab36 added some styling to make the
embed previews prettier, and in particular added a bottom fading gradient to
make the embed description text fade out slowly, when it is out of bounds.
The fading used an ::after pseudo-element which had 100% height of the
`.data-container` which contained the title and the description of the
preview. This pseudo-element got overlaid on the title and made it
un-clickable.

This commit retains the visual appearance of the fade, while reducing the
height of the ::after pseudo element, so that it never gets overlaid on the
title, keeping it clickable always.

--- a/static/styles/night_mode.scss
+++ b/static/styles/night_mode.scss
@@ -25,7 +25,7 @@ body.night-mode {
     }
 
     .message_embed .data-container::after {
-        background: linear-gradient(0deg, hsl(212, 28%, 18%), transparent 10%);
+        background: linear-gradient(0deg, hsl(212, 28%, 18%), transparent 100%);
     }
 
     .column-left .left-sidebar,
